[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "japps"
dynamic = ["version"]
authors = [
  { name="OlegSuperBro", email="olegrakovic323@gmail.com" },
]
description = "Simple support for complicated plugins"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "typing-extensions==4.7.1"
]
[project.urls]
"Homepage" = "https://github.com/OlegSuperBro/japps"
"Bug Tracker" = "https://github.com/OlegSuperBro/japps/issues"

[tool.setuptools.dynamic]
version = {attr = "japps.__version__"}